# docs/swagger.yaml
@@ -26,13 +26,14 @@ definitions:
       description:
         maxLength: 25
         type: string
-      idd:
+      id:
         type: integer
       title:
         maxLength: 10
         minLength: 3
         type: string
       url:
+        example: https://google.com/xyz-video
         type: string
     required:
     - author
@@ -42,110 +43,12 @@ host: localhost
 info:
   contact:
     email: yintar5@gmail.com
-    name: yinebe-tariku
-    url: https://www.linkedin.com/yinebeb-tariku
+    name: Yinebe T.
+    url: www.linkedin.com/in/yinebeb-tariku
   title: hexagonal-architecture
   version: 0.1.0
 paths:
-  /all-videos:
-    get:
-      consumes:
-      - application/json
-      description: Show all video description
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/entity.Video'
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "404":
-          description: Not Found
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: ShowAll video
-      tags:
-      - Video
-  /login:
-    post:
-      consumes:
-      - application/json
-      description: login user description
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: string
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "404":
-          description: Not Found
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Login user
-      tags:
-      - User
   /videos:
-    delete:
-      consumes:
-      - application/json
-      description: Delete video description
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/entity.Video'
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "404":
-          description: Not Found
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Delete video
-      tags:
-      - Video
     get:
       consumes:
       - application/json
@@ -182,6 +85,13 @@ paths:
       consumes:
       - application/json
       description: Save video description
+      parameters:
+      - description: video to save
+        in: body
+        name: video
+        required: true
+        schema:
+          $ref: '#/definitions/entity.Video'
       produces:
       - application/json
       responses:
@@ -240,6 +150,39 @@ paths:
               type: string
             type: object
       summary: Update video
+      tags:
+      - Video
+  /videos/:id:
+    delete:
+      consumes:
+      - application/json
+      description: Delete video description
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.Video'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Delete video
       tags:
       - Video
 swagger: "2.0"
